Completed line up

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,15 +6,22 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/greenBlinkyDancer.js"></script>
     <script src="src/dancerJohnnyBravo.js"></script>
+    <script src="src/apeach.js"></script>
+    <script src="src/ryan.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
 
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="lineUp">line up dancers!</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a red blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="greenBlinkyDancer">add a green blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="DancerJohnnyBravo">add Johnny Bravo</a>
-        
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="Apeach">add Apeach</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="Ryan">add Ryan</a>
+
     </div>
     <script src="src/init.js"></script>
   </body>
